fix(action icons): from getting squished on prod build

--- a/src/client/styles/layout/label.scss
+++ b/src/client/styles/layout/label.scss
@@ -31,12 +31,13 @@
 	/* Actions
 	 **********/
 	.actions {
-		text-align: right;
+		display: flex;
+		justify-content: flex-end;
 		> * {
 			position: relative;
 			top: 2px;
 			~ * {
-				margin-left: 5px;
+				margin-left: 8px;
 			}
 		}
 	}
